2003-02-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ParseAdaptor.java (parseNestedCmd):
	Raise missing close-bracket exception for easy error case.
	* src/jacl/tcl/lang/Parser.java (parseCommand):
	Raise "missing close-bracket" exception when parser
	finds a nested command that is not terminated by
	a close bracket. This allows a couple of failing test
	cases to pass.

2003-02-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tcl/error.test:
	* tests/tcl/expr.test:
	* tests/tcl/for.test:
	* tests/tcl/if.test:
	* tests/tcl/incr.test:
	* tests/tcl/while.test: Change expected result
	of tests that examine the errorInfo variable
	after an error is raised. The message
	"while compiling" has been changed to "while executing"
	to match the Jacl implementation. Jacl does not
	have a bytecode compiler, so it can't match the
	errorInfo messages of Tcl 8.X. This change allows
	a number of test cases to pass.

2003-02-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Expression.java (ExprGetValue):
	Throw a plain syntax error when unmatched
	parens or a bad ?: operator is encountered.
	This is less descriptive but matches the Tcl
	8.3 implementation.

2003-02-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Expression.java (ExprGetValue,
	mathFunction): Return null from ExprGetValue when
	a CLOSE_PAREN is found and check for this special
	case so that the proper error message is returned.

2003-02-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Parser.java (eval2): Check to
	see if the character just before the end of the
	returned script is a terminator and don't include
	it in the error message if it is. This fixes
	a test case in error.test.

2003-02-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ClockCmd.java (GetDate):
	Work around bug in JDK's Calendar implementation
	by adding whole days instead of a days worth
	of seconds. This allows the two failing test